--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
+    "antd": "^5.16.4",
     "apexcharts": "^3.27.2",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "datatables.net": "^2.0.5",
+    "datatables.net-dt": "^2.0.5",
     "eva-icons": "^1.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "line-awesome": "^1.3.0",
     "mui-datatables": "^3.7.7",
     "node-sass": "^5.0.0",
