--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Install and Build 🔧
       run: |
-        npm i
+        npm install
         npm run build
 
     - name: Deploy via SSH 🚀
